infrastructure/01-system/hubble/manifests/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: hubble-auth
  namespace: hubble
spec:
  forwardAuth:
    address: http://hubble-oauth2-proxy.hubble.svc.cluster.local:80/oauth2/auth
    trustForwardHeader: true
    authResponseHeaders:
      - X-Auth-Request-User
      - X-Auth-Request-Email
      - Authorization
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: hubble-cors
  namespace: hubble
spec:
  headers:
    accessControlAllowMethods:
      - GET
      - POST
      - OPTIONS
    accessControlAllowHeaders:
      - authorization
      - content-type
      - x-grpc-web
      - x-user-agent
    accessControlAllowOriginList:
      - https://hubble.foobarbaz.fr
    accessControlMaxAge: 100
    addVaryHeader: true
