infrastructure/01-system/hubble/manifests/auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2-proxy-hubble
  namespace: hubble
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: oauth2-proxy-hubble
  template:
    metadata:
      labels:
        k8s-app: oauth2-proxy-hubble
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 5678
        runAsGroup: 5678
        fsGroup: 5678
      containers:
        - name: oauth2-proxy
          image: quay.io/oauth2-proxy/oauth2-proxy:v7.6.0
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 5678
            runAsGroup: 5678
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 50m
              memory: 128Mi
          args:
            - --provider=oidc
            - --oidc-issuer-url=https://auth.foobarbaz.fr/realms/master
            - --email-domain=*
            - --http-address=0.0.0.0:4180
            - --upstream=http://hubble-ui.kube-system.svc.cluster.local:80
            - --cookie-secure=true
            - --cookie-samesite=lax
            - --set-authorization-header=true
            - --pass-access-token=true
            - --redirect-url=https://hubble.foobarbaz.fr/oauth2/callback
            - --insecure-oidc-skip-issuer-verification=true
            - --reverse-proxy=true
            - --allowed-group=cilium-admin
            - --scope=openid profile email groups
          ports:
            - containerPort: 4180
