infrastructure/01-system/hubble/manifests/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy-hubble
  namespace: hubble
spec:
  selector:
    k8s-app: oauth2-proxy-hubble
  ports:
    - port: 80
      targetPort: 4180
  type: ClusterIP
