infrastructure/01-system/hubble/manifests/ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hubble-ui
  namespace: hubble
  labels:
    k8s-app: hubble-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: hubble-ui
  template:
    metadata:
      labels:
        k8s-app: hubble-ui
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: frontend
          image: quay.io/cilium/hubble-ui:v0.13.5
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1000
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
          ports:
            - containerPort: 8081
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 20m
              memory: 64Mi
        - name: backend
          image: quay.io/cilium/hubble-ui-backend:v0.13.5
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1000
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
          ports:
            - containerPort: 8090
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 20m
              memory: 64Mi
---
apiVersion: v1
kind: Service
metadata:
  name: hubble-ui
  namespace: hubble
spec:
  ports:
    - port: 80
      targetPort: 8081
      name: http
  selector:
    k8s-app: hubble-ui
