infrastructure/01-system/hubble/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hubble-ui-ingress
  namespace: hubble
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    ingress.cilium.io/loadbalancer-mode: "shared"
spec:
  ingressClassName: cilium
  tls:
    - hosts:
        - hubble.tomlab.fr
        - hubble.foobarbaz.fr
      secretName: hubble-ui-tls
  rules:
    - host: hubble.tomlab.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hubble-oauth2-proxy
                port:
                  number: 80
    - host: hubble.foobarbaz.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hubble-oauth2-proxy
                port:
                  number: 80
